--- a/web/origianl testing tempale.html
+++ b/web/origianl testing tempale.html
@@ -1,20 +1,30 @@
 <html>
 <head>
-  <title>Brug IOT</title>
+  <title>testing tempale old</title>
  <script      
 src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
 </script> 
 
 </head>
 <body>
-<h1>Generated sensor data</h1>
+<h1> Testing template, old</h1>
+<pre>
+https://www.w3schools.com/graphics/plot_chartjs.asp
+1 ======
+2 ============
+3 ================
+4 ======================================================
+5 ===========================================================
+</pre>
+
+
 <canvas id="myChart" style="width:150%;max-width:1000px"></canvas>
 
 <script>
+const xValues = [50,60,70,80,90,100,110,120,130,140,150];
+const yValues = ["7","8","8","9","9","9","10","11","14","14","20"];
 
 new Chart("myChart", {
-
-
   type: "line",
   data: {
     labels: xValues,
