todo voor laatste aanpassingen toegevoegd timestamp en clear toegevoegd in qwiic clear url en qwiic functionaliteit toegevoegd in flask_prototype optional motor_control toegevoegd knoppen toegevoegd aan website template

--- a/web/data display website (template).html
+++ b/web/data display website (template).html
@@ -44,5 +44,10 @@ setTimeout(() => {
 
 </script>
 
+<a href='/brug_open'><button>Brug open</button></a>
+<a href='/brug_sluit'><button>Brug sluiten</button></a>
+<a href='/calibrate'><button>Rekstrook opnieuw calibreren</button></a>
+<a href='/clear'><button>Reset sensor data</button></a>
+
 </body>
 </html>
