added motor sensor delay idpv pagina reloaden redirect naar root

--- a/web/data display website (template).html
+++ b/web/data display website (template).html
@@ -38,8 +38,8 @@ new Chart("myChart", {
 });
 // reload page to reload the data on the page
 setTimeout(() => {
-  document.location.reload();
-}, 3000);
+window.location.replace("/")
+}, 2000);
 
 </script>
 
